--- a/index.html
+++ b/index.html
@@ -33,55 +33,55 @@
       <div class="row" data-time="9">
         <div class="col-md-1 hour">9AM</div>
         <textarea class="col-md-10 past"></textarea>
-        <button class="col-md-1 saveBtn fa fa-save" id="9">Save</button>
+        <button class="col-md-1 saveBtn fa fa-save" id="9"><i></i></button>
       </div>
 
       <div class="row" data-time="10">
         <div class="col-md-1 hour">10AM</div>
         <textarea class="col-md-10 past"></textarea>
-        <button class="col-md-1 saveBtn fa fa-save" id="10">Save</button>
+        <button class="col-md-1 saveBtn fa fa-save" id="10"><i></i></button>
       </div>
 
       <div class="row" data-time="11">
         <div class="col-md-1 hour">11AM</div>
         <textarea class="col-md-10 past"></textarea>
-        <button class="col-md-1 saveBtn fa fa-save" id="11">Save</button>
+        <button class="col-md-1 saveBtn fa fa-save" id="11"><i></i></button>
       </div>
 
       <div class="row" data-time="12">
         <div class="col-md-1 hour">12PM</div>
         <textarea class="col-md-10 past"></textarea>
-        <button class="col-md-1 saveBtn fa fa-save" id="12">Save</button>
+        <button class="col-md-1 saveBtn fa fa-save" id="12"><i></i></button>
       </div>
 
       <div class="row" data-time="13">
         <div class="col-md-1 hour">1PM</div>
         <textarea class="col-md-10 past"></textarea>
-        <button class="col-md-1 saveBtn fa fa-save" id="13">Save</button>
+        <button class="col-md-1 saveBtn fa fa-save" id="13"><i></i></button>
       </div>
 
       <div class="row" data-time="14">
         <div class="col-md-1 hour">2PM</div>
         <textarea class="col-md-10 past"></textarea>
-        <button class="col-md-1 saveBtn fa fa-save" id="14">Save</button>
+        <button class="col-md-1 saveBtn fa fa-save" id="14"><i></i></button>
       </div>
 
       <div class="row" data-time="15">
         <div class="col-md-1 hour">3PM</div>
         <textarea class="col-md-10 past"></textarea>
-        <button class="col-md-1 saveBtn fa fa-save" id="15">Save</button>
+        <button class="col-md-1 saveBtn fa fa-save" id="15"><i></i></button>
       </div>
 
       <div class="row" data-time="16">
         <div class="col-md-1 hour">4PM</div>
         <textarea class="col-md-10 past"></textarea>
-        <button class="col-md-1 saveBtn fa fa-save" id="16">Save</button>
+        <button class="col-md-1 saveBtn fa fa-save" id="16"><i></i></button>
       </div>
 
       <div class="row" data-time="17">
         <div class="col-md-1 hour">5PM</div>
         <textarea class="col-md-10 past"></textarea>
-        <button class="col-md-1 saveBtn fa fa-save" id="17">Save</button>
+        <button class="col-md-1 saveBtn fa fa-save" id="17"><i></i></button>
       </div>
     </div>
 
